--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,6 @@ jobs:
           GITHUB_TOKEN: ${{secrets.RELEASER_TOKEN}}
 
       - run: pnpm i
-      - run: pnpm publish --no-git-checks --access public --filter objecs
+      - run: pnpm publish --no-git-checks --access public --filter gameinput
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
